# siapwpa_ros2_project

./: .gitignore  .gitmodules  4_wheel_robot.sdf  README.md  camera.sdf  jetsonreq.txt  launch.py  launch.sh  nexus_4wd_mecanum.sdf  punkty.txt  racetrack.sdf  racetrack_barriers.sdf  requirements.txt  sourceme.sh  world_mec copy 2.sdf  world_mec copy.sdf  world_mec.sdf  world_mec_copy.sdf
.devcontainer/: Dockerfile  compose.yaml
camera_package/: package.xml  setup.py
camera_package/camera_package/: Controllers.py  FrameProcessors.py  camera-publisher.py  camera-subscriber.py  camera_publisher.py  camera_pubsub.py  camera_subscriber.py  lidar_subscriber.py  line-follower.py  line_follower.py  my_node.py  obstacle_avoidance.py  position_subscriber.py  publisher_member_function.py  subscriber_member_function.py
camera_package/launch/: bridge.launch.py
camera_package/models/Trapezoid/: Trapezoid_barriers_model.sdf  Trapezoid_model.sdf
camera_package/models/nexus_4wd_mecanum/: nexus_4wd_mecanum.sdf
camera_package/worlds/: racetrack.sdf
install/: local_setup.sh  setup.sh
lidar_scripts/: lidarNavigation.py  lidarPointsSubcriber.py  lidarSubscriber.py
mecanum/: GamepadTest.py  MecanumGamepadControl.py  camera_libs_symlink  camera_libs_symlink.txt  control.py
mecanum/MecanumDemo-main/: README.md  control.py  main.cpp  mecanumTest.py  mecanum_pb2.py
models/realsense_camera/: model.config  (+1 more)
racetrack_evaluator/: Create_Track_Trapezoid.ipynb  position_subscriber.py  racetrack_evelauator.py
ractrack_evaluator/: racetrack_evelauator.py
scripts/: test.py
(+14 files in other folders)
