<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kapiotrow@student.agh.edu.pl">developer</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>numpy</exec_depend>
  <!-- <exec_depend>camera_subscriber</exec_depend> -->
  <exec_depend>Controllers</exec_depend>
  <exec_depend>FrameProcessors</exec_depend>
  <exec_depend>line_follower</exec_depend>
  <exec_depend>camera_pubsub</exec_depend>
  <exec_depend>keyboard</exec_depend>
  <exec_depend>time</exec_depend>

  <!-- exec_depend nazwa bibloteki  -->
  <!-- by dwa pliki sie widzialy to tez-->

  <!-- model/samochod/cmd-vel-->
  <!-- image display-->

  <export>
    <gazebo_ros> gazebo_model_path="/home/developer/ros2_ws/src/camera_package/models" </gazebo_ros>
    <build_type>ament_python</build_type>
  </export>

</package>
